--- a/index.html
+++ b/index.html
@@ -1,61 +1,46 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Scelta Maglia</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f7f7f7;
-      color: #222;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-    }
-    header {
-      background: #1847a8;
-      color: #fff;
-      padding: 2rem 0 1rem 0;
-    }
-    main {
-      margin: 2rem auto;
-      max-width: 600px;
-      background: #fff;
-      padding: 2rem;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(24, 71, 168, 0.06);
-    }
-    footer {
-      margin-top: 3rem;
-      font-size: 0.9rem;
-      color: #888;
-    }
-    a {
-      color: #1847a8;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Modulo di Registrazione</title>
+    <style>
+        body { font-family: sans-serif; margin: 20px; }
+        form { max-width: 500px; margin: 0 auto; padding: 20px; border: 1px solid #ccc; border-radius: 8px; }
+        div { margin-bottom: 15px; }
+        label { display: block; margin-bottom: 5px; font-weight: bold; }
+        input[type="text"], select { width: 100%; padding: 8px; border: 1px solid #ddd; border-radius: 4px; box-sizing: border-box; }
+        button { background-color: #4CAF50; color: white; padding: 10px 15px; border: none; border-radius: 4px; cursor: pointer; font-size: 16px; }
+        button:hover { background-color: #45a049; }
+    </style>
 </head>
 <body>
-  <header>
-    <h1>Scelta Maglia</h1>
-    <p>Benvenuto sul sito ufficiale del progetto!</p>
-  </header>
-  <main>
-    <h2>Il tuo sito è online 🎉</h2>
-    <p>
-      Questa è una pagina di esempio pubblicata con <strong>GitHub Pages</strong>.<br>
-      Puoi modificare liberamente questo file per personalizzare il tuo sito.<br>
-      <br>
-      <em>Repository:</em> <a href="https://github.com/birc23/scelta-maglia" target="_blank">birc23/scelta-maglia</a>
-    </p>
-  </main>
-  <footer>
-    &copy; 2025 Scelta Maglia • Creato con <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>
-  </footer>
+    <form action="https://formspree.io/f/mgvzypqj" method="POST">
+        <h2>Modulo di Selezione</h2>
+        <div>
+            <label for="nome">Nome:</label>
+            <input type="text" id="nome" name="Nome" required>
+        </div>
+        <div>
+            <label for="cognome">Cognome:</label>
+            <input type="text" id="cognome" name="Cognome" required>
+        </div>
+        <div>
+            <label for="numero">Seleziona un numero (1-99):</label>
+            <select id="numero" name="Numero" required>
+                <option value="">Seleziona...</option>
+                <script>
+                    const select = document.getElementById('numero');
+                    for (let i = 1; i <= 99; i++) {
+                        const option = document.createElement('option');
+                        option.value = i;
+                        option.textContent = i;
+                        select.appendChild(option);
+                    }
+                </script>
+            </select>
+        </div>
+        <button type="submit">Invia</button>
+    </form>
 </body>
 </html>
